--- a/src/liquid/layout/theme.liquid
+++ b/src/liquid/layout/theme.liquid
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="shortcut icon" href="{{ 'favicon.ico' | asset_url }}">
-
+  
     {{ content_for_header }}
-
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     {{- 'theme.css' | asset_url | stylesheet_tag -}}
   </head>
 
