--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,1 +1,4 @@
-@import './components/example';
+@import './globals/vars';
+@import './globals/global';
+@import './components/hero';
+@import './components/featured-products';
