--- a/src/styles/globals/_vars.scss
+++ b/src/styles/globals/_vars.scss
@@ -12,3 +12,9 @@ $accent: #83d0bd;
 $contrast: #f48400;
 $rose:rosybrown;
 $dark: #2f3237;
+
+//screen sizes
+$sm: 29.6875rem;
+$md: 48rem;
+$lg: 60.5rem;
+$xl: 88rem;
