--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,4 +1,7 @@
 @import './globals/vars';
+@import './globals/mixins';
 @import './globals/global';
 @import './components/hero';
 @import './components/featured-products';
+@import './components/collection';
+@import './components/nav';
