--- a/src/liquid/sections/featured-products.liquid
+++ b/src/liquid/sections/featured-products.liquid
@@ -1,7 +1,9 @@
 <section class="featured-products">
-	<h2 class="featured-products__heading">{{ collections[section.settings.collection].title}}</h2>
-	<div class="featured-products__items">
-		{% render 'product-tile' for  collections[section.settings.collection].products as product %}
+	<div class="container">
+		<h2 class="featured-products__heading">{{ collections[section.settings.collection].title}}</h2>
+		<div class="featured-products__items">
+			{% render 'product-tile' for  collections[section.settings.collection].products as product %}
+		</div>
 	</div>
 </section>
 
