--- a/src/liquid/snippets/hero.liquid
+++ b/src/liquid/snippets/hero.liquid
@@ -15,9 +15,11 @@ Requires the following arguments
 </style>
 <section class="hero hero--{{ section.id }}">
 	<div class="hero__overlay"></div>
-	<div class="hero__content hero__content--{{settings.alignment }}">
-		<h2 class="hero__heading">{{ settings.heading }}</h2>
-		<p class="hero__copy">{{ settings.copy }}</p>
-		<a href="{{ settings.link_url }}" class="hero__link">{{ settings.link_text }}</a>
+	<div class="container">
+		<div class="hero__content hero__content--{{settings.alignment }}">
+			<h2 class="hero__heading">{{ settings.heading }}</h2>
+			<p class="hero__copy">{{ settings.copy }}</p>
+			<a href="{{ settings.link_url }}" class="hero__link">{{ settings.link_text }}</a>
+		</div>
 	</div>
 </section>
