--- a/src/styles/globals/_global.scss
+++ b/src/styles/globals/_global.scss
@@ -8,7 +8,16 @@ body{
 	margin: 0;
 	padding: 0;
 }
-h1,h2,h3,h4,h5,p{
+h1{
+font-size:1.8rem;
+margin:0;
+line-height: 1.8;
+@include mq($lg){
+	font-size: 2.5rem;
+	color: $dark;
+}
+}
+h2,h3,h4,h5,p{
 	margin:0;
 }
 img{
@@ -17,4 +26,19 @@ img{
 a{
 	text-decoration: none;
 	color:$rose;
+}
+.container {
+position: relative;
+margin: 0 auto;
+padding:0 1rem;
+@include mq($md){
+padding:0 2rem;
+max-width: $xl;
+}
+}
+.pd{
+	margin-bottom: 0.5rem;
+	@include mq($md){
+		margin-bottom:1.5rem;
+		}
 }
