--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,7 +1,9 @@
 @import './globals/vars';
 @import './globals/mixins';
 @import './globals/global';
+@import './components/topbar';
 @import './components/hero';
 @import './components/featured-products';
 @import './components/collection';
 @import './components/nav';
+@import './components/product';
