--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -7,7 +7,7 @@
 	}
 
 	& .logo {
-		font-weight: $f-bold;
+		font-weight: $f-normal;
 		font-size: 1.8rem;
 		text-transform: uppercase;
 	}
@@ -37,17 +37,18 @@
 	}
 	&__link{
 		position: relative;
+		display: inline-block;
 		font-size:0.8275rem;
 		text-transform: uppercase;
-		font-weight: $f-bold;
+		font-weight: $f-thin;
 		text-decoration: none;
 		color: $dark;
-		padding:.5rem 1rem;
+		padding:1rem 0.6rem;
 		&::after{
 			transition: 500ms ease-in;
 			content: '';
 			position: absolute;
-			bottom: -0.6rem;
+			bottom: -1.075rem;
 			left: 1rem;
 			height: 4px;
 			width: 0;
